<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>
    <TextView
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/login"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:inputType="text"
        android:hint="@string/login"
        android:id="@+id/login_text_edit"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/password_text_edit"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/login"
        android:id="@+id/login_button"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/register_hint"
        android:layout_weight="1"/>
    <Button
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/register"
        android:id="@+id/new_account_button"/>
</LinearLayout>